--- a/header.html
+++ b/header.html
@@ -3,39 +3,37 @@
 <html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+
     <meta charset="utf-8" />
     <title>Header</title>
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="style/estilos.css">
+
 </head>
 
 <body>
 
-	<!--Cabeçalho-->
-	<header>
-		
-		Wiki Vingadores
+    <!--Cabeçalho-->
+    <header>
 
-	</header>
+        Wiki Vingadores
 
-	<!-- Menu -->	
-	<nav>
+    </header>
 
-		<menu>
+    <!-- Menu -->
+    <nav>
 
-			<ul>
+        <ul>
 
-				<li> <a href="home.html" target="_parent"> Página inicial </a> </li>
-			 	<li> <a href="membros.html" target="_parent"> Membros </a> </li>
-				<li> <a href="filmes.html" target="_parent"> Filmes </a> </li>
-		 		<li> <a href="noticias.html" target="_parent"> Notícias </a> </li>
-				<li> <a href="contato.html" target="_parent"> Contato </a> </li>
+            <li> <a href="home.html" target="_parent"> Página inicial </a> </li>
+            <li> <a href="membros.html" target="_parent"> Membros </a> </li>
+            <li> <a href="filmes.html" target="_parent"> Filmes </a> </li>
+            <li> <a href="noticias.html" target="_parent"> Notícias </a> </li>
+            <li> <a href="contato.html" target="_parent"> Contato </a> </li>
 
-			</ul>			
-			
-		</menu>
+        </ul>
 
-	</nav>
-		
+    </nav>
+
 </body>
 
 </html>
