--- a/membros.html
+++ b/membros.html
@@ -1,19 +1,25 @@
 ﻿<!DOCTYPE html>
 
-<html lang="pt-br">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+
     <meta charset="utf-8" />
     <title>Membros</title>
+    <link rel="stylesheet" type="text/css" href="style/estilos.css">
+
 </head>
 
 <body>
 
     <!-- Menu -->
-    <menu> 
-        <iframe src="menu.html" width="100%" style="border:none" scrolling="no"></iframe>       
-    </menu>
-
+    <nav> 
+        <iframe
+                src="header.html"  
+                width="100%"  
+                scrolling="no" >
+        </iframe>        
+    </nav>
     <!--Lista de Membros dos Vingadores-->
     <article>
         
@@ -24,7 +30,7 @@
             <tr>
                 <td>
                     <figure>
-                        <img src="homem-de-ferro.jpg" alt="Homem de Ferro" title="Homem de Ferro" width="200" height="200" />
+                        <img src="img/homem-de-ferro.jpg" alt="Homem de Ferro" title="Homem de Ferro" width="200" height="200" />
                         <figcaption><i>Homem de Ferro</i></figcaption>
                     </figure>
                 </td>
@@ -36,7 +42,7 @@
             <tr>
                 <td>
                     <figure>
-                        <img src="thor.jpg" alt="Thor"  title="Thor" width="200" height="200" />
+                        <img src="img/thor.jpg" alt="Thor"  title="Thor" width="200" height="200" />
                         <figcaption><i>Thor no filme Thor Ragnarok, 2019</i></figcaption>
                     </figure>
                 </td>
@@ -48,7 +54,7 @@
             <tr>
                 <td>
                     <figure>
-                        <img src="capitao-america.PNG" alt="Capitão América" title="Capitão América" width="200" height="200" />
+                        <img src="img/capitao-america.PNG" alt="Capitão América" title="Capitão América" width="200" height="200" />
                         <figcaption><i>Poster do Capitão America</i></figcaption>
                     </figure>
                 </td>
@@ -60,7 +66,7 @@
             <tr>
                 <td>
                     <figure>
-                        <img src="hulk.jpg" alt="Hulk" title="Hulk" width="200" height="200" />
+                        <img src="img/hulk.jpg" alt="Hulk" title="Hulk" width="200" height="200" />
                         <figcaption><i>Poster do Hulk</i></figcaption>
                     </figure>
                 </td>
@@ -72,7 +78,7 @@
             <tr>
                 <td>
                     <figure>
-                        <img src="viuva-negra.jpeg" alt="Viúva Negra" title="Viúva Negra" width="200" height="200" />
+                        <img src="img/viuva-negra.jpeg" alt="Viúva Negra" title="Viúva Negra" width="200" height="200" />
                         <figcaption><i>Viúva Negra em ação</i></figcaption>
                     </figure>
                 </td>
@@ -84,7 +90,7 @@
             <tr>
                 <td>
                     <figure>
-                        <img src="gaviao-arqueiro.jpg" alt="Gavião Arqueiro" title="Gavião Arqueiro" width="200" height="200" />
+                        <img src="img/gaviao-arqueiro.jpg" alt="Gavião Arqueiro" title="Gavião Arqueiro" width="200" height="200" />
                         <figcaption><i>Poster de Vingadores Guerra Infinita</i></figcaption>
                     </figure>
                 </td>
