--- a/noticias.html
+++ b/noticias.html
@@ -13,6 +13,62 @@
         <iframe src="menu.html" width="100%" style="border:none" scrolling="no"></iframe>        
     </menu>
 
-asasa
+    <h1>
+    	Notícias recentes
+	</h1>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+	<section>
+		
+
+	</section>
+
+
+
+
 </body>
 </html>
