--- a/home.html
+++ b/home.html
@@ -3,38 +3,42 @@
 <html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+
     <meta charset="utf-8" />
     <title>Wiki Vingadores</title></head>
+    <link rel="stylesheet" type="text/css" href="style/estilos.css">
+
 <body>
 		
 	<!-- Menu -->
-	<menu> 
-        <iframe src="menu.html" width="100%" style="border:none" scrolling="no"></iframe>        
-    </menu>
+	<nav> 
+        <iframe
+        		src="header.html"  
+        		width="100%"  
+        		scrolling="no" >
+        </iframe>        
+    </nav>
 
 	<!-- Conteúdo -->
+	<article>	
+			
+		<h1>
+			Resumo da franquia vingadores
+		</h1>
 
-	tag	
-	<table>
-		<tr>
-			<td align="center"> <h1> Resumo da franquia vingadores</h1> </td>
-		</tr>
-		<tr align="justify">
-			<td>
-				<p>				
+		<p>				
 				Vingadores ou Os Vingadores (Avengers no original em inglês) são um grupo de super-heróis 
 				de história em quadrinhos publicados nos Estados Unidos pela editora Marvel Comics. O grupo
 				também aparece em adaptações da Marvel para cinema, desenho animado e jogos eletrônicos.
-				</p>
-				<p>
-				Os heróis mais conhecidos são a formação original de Thor, Homem de Ferro, Vespa, Homem-Formiga, e Hulk,
-				além de seu primeiro recruta, o Capitão América (introduzido na quarta edição). A equipe, inspirada na
-				Liga da Justiça da DC Comics, tem molde de um clube, inclusive com o mordomo do Homem de Ferro, Jarvis,
-				os servindo. No Universo Marvel, a equipe tradicionalmente é a primeira a ser chamada pelo governo dos 
-				EUA quando defrontado por desafios de ordem cósmica, e tem bases em Nova York e uma ilha na costa
-				americana.
-				</p>
-				<p>
+		</p>
+
+		<p>				
+				Vingadores ou Os Vingadores (Avengers no original em inglês) são um grupo de super-heróis 
+				de história em quadrinhos publicados nos Estados Unidos pela editora Marvel Comics. O grupo
+				também aparece em adaptações da Marvel para cinema, desenho animado e jogos eletrônicos.
+		</p>
+
+		<p>
 				A primeira aparição dos Vingadores nos quadrinhos foi em sua própria revista, intitulada 
 				The Avengers, em Setembro de 1963 (no mesmo mês de estreia de X-Men). A equipe foi criada 
 				por Stan Lee, Jack Kirby e Dick Ayers, como uma resposta à Liga da Justiça, cuja revista 
@@ -43,8 +47,9 @@
 				heróis novos, assim como o subsequente X-Men. Os Vingadores, reunidos dois anos depois do
 				Quarteto, foram os primeiros da Marvel fiéis ao conceito da equipe de super-heróis já 
 				estabelecidos.
-				</p>
-				<p>
+		</p>
+
+		<p>
 				Diferente de outras equipes do universo Marvel, os Vingadores receberam reconhecimento oficial 
 				do governo, quase desde o início com autoridade aceita internacionalmente durante a maior parte
 				de sua história. O grupo é conhecido por reunir os "heróis mais poderosos da Terra" e ao longo 
@@ -54,37 +59,52 @@
 				retomaria sua condição de "a mais poderosa" nos anos 1970, com a proposta de "combater vilões
 				que nenhum herói conseguiria sozinho", e com isso fazendo uma mescla com os membros fundadores
 				e os novos recrutas.
-				</p>
-				<p>
+		</p>
+
+		<p>
 				Com a finalidade de ser a equipe de "Super-Heróis Mais Poderosos da Terra", os Vingadores tem 
 				contatos com humanos, inumanos, heróis mecânicos, vilões regenerados e seres sobrenaturais. A
 				respeito de suas diferenças (que facilmente terminam em brigas), eles têm conseguido se unir 
 				em uma equipe coesa, para combater extraordinárias ameaças ao mundo, se reunindo ao som de
 				seu grito de guerra: "Avante, Vingadores!".
-				</p>
-				<p>
+		</p>
+
+		<p>
 				No Brasil a revista sempre recebeu um cuidado especial da Marvel e teve alguns dos melhores 
 				escritores e desenhistas da indústria das histórias em quadrinhos trabalhando nela ao longo dos
 				anos, com o título se mantendo como o favorito dos fãs. A série continua, virtualmente sem 
 				interrupções, até os dias atuais, com as histórias explorando a ideia do que significa ser
 				humano ou super-humano, o papel e as responsabilidades de ser um super-herói.
-				</p>
-				<p>
+		</p>
+
+		<p>
 				Dois títulos acompanhantes foram publicados nos anos 1980. Os Vingadores da Costa Oeste Volume
 				1, foi uma série limitada com quatro edições, com o #1 estreando em Setembro de 1984; Volume 2
 				(mais tarde renomeada de Vingadores da Costa Oeste a partir do #47) como uma série regular 
 				durando 102 edições de Outubro de 1985 a Janeiro de 1994. E Solo Avengers (renomeada para
 				Avengers Spotlight) que durou 40 edições de 1987 a 1989.
-				</p>
-				<p>
+		</p>
+
+		<p>
 				A revista foi relançada três vezes nos últimos dez anos. A primeira vez, em 1996, era parte da 
 				saga Heróis Renascem. A segunda, um ano depois, retornou a equipe à sua continuidade original;
 				e a terceira vez, em 2005, quando surgiram os New Avengers ou os Novos Vingadores, após o fim 
 				da antiga equipe, e também como uma estratégia de marketing.
-				</p>
-			</td>
-		</tr>
-	</table>	
+		</p>
+
+</article>
+<!--	
+<aside>
+		<iframe
+        		src="noticias.html"  
+        		scrolling="no" >
+        </iframe> 
+</aside>
+-->
+<footer>
+
+</footer>	
 
 </body>
+
 </html>
