Página de fundo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="estilos/estilos.css" rel="stylesheet">
     <script type="text/javascript" src="bibliotecas\jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="bibliotecas\jcanvas.min.js"></script>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="scripts\scripts.js"></script>
 </head>
 <body>
     <h1>Sobrevivencia estudantil na UFBA</h1> <br />
