--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="scripts\scripts.js"></script>
 </head>
 <body>
-    <h1>Sobrevivencia estudantil na UFBA</h1>
+    <h1>Sobrevivência estudantil na UFBA</h1>
     <canvas width="700" height="480"> </canvas>
 </body>
 </html>
