--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
+
 <head>
-    <title> MATC82 </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>MATC82</title>
     <link href="estilos/estilos.css" rel="stylesheet">
     <script type="text/javascript" src="bibliotecas\jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="bibliotecas\jcanvas.min.js"></script>
     <script type="text/javascript" src="scripts\scripts.js"></script>
 </head>
+
 <body>
+
     <h1>Sobrevivencia estudantil na UFBA</h1>
     <canvas width="700" height="480"> </canvas>
+
 </body>
+
 </html>
